<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_accounts"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/title_statistics" />
</menu> 